--- a/new-synology-share.yaml
+++ b/new-synology-share.yaml
@@ -1,7 +1,7 @@
 
 ---
 - name: Create shared folder on Synology NAS
-  hosts: CF5NAS
+  hosts: cf5nas.cf5home.net
   gather_facts: no   # Synology doesn’t need full facts unless required
   become: no         # Usually not needed if user has rights
   tasks:
