--- a/new-synology-share.yaml
+++ b/new-synology-share.yaml
@@ -6,11 +6,23 @@
   become: no         # Usually not needed if user has rights
   tasks:
 
-    - name: Create shared folder using shell command
-      ansible.builtin.shell: |
-        synoshare --add "{{ share_name }}" "{{ share_path }}" "{{ share_description }}"
-      args:
-        executable: /bin/bash
+
+- name: Create shared folder using synoshare (idempotent)
+  ansible.builtin.shell: |
+    /usr/syno/bin/synoshare --get "{{ share_name }}" >/dev/null 2>&1 \
+    || /usr/syno/bin/synoshare --add "{{ share_name }}" "{{ share_path }}" "{{ share_description }}"
+  args:
+    executable: /bin/sh
+      vars:
+        share_name: "automation_share"
+        share_path: "/volume1/automation_share"
+        share_description: "Created by Ansible via Semaphore"
+
+    #- name: Create shared folder using shell command
+    #  ansible.builtin.shell: |
+    #    synoshare --add "{{ share_name }}" "{{ share_path }}" "{{ share_description }}"
+    #  args:
+    #    executable: /bin/bash
       vars:
         share_name: "automation_share"
         share_path: "/volume1/automation_share"
